--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ python:
   - "2.7"
 # command to install dependencies
 install:
-  - python setup.py -q install
+  - pip install portalocker
+  - python setup.py install
 # command to run tests
 script: python cotimelog/tests.py
